# tkintertools

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.zh-Hans.md  README.zh-Hant.md  README.zh_CN.md  README.zh_TW.md  SECURITY.md  TODO.md  VERSION.md  _tkintertools.py  changelog.yml  changelog_to_yaml.py  codecov.yml  convert.py  custom.css  docsify.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  navigation.html  pyproject.toml  requirements.txt  sitemap.xml  test.py  test_button.py  test_color.py  test_entry.py  test_label.py  test_move.py  test_progressbar.py  (+5 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: code-coverage.yml  codecov.yml  coverage.yml  pylint.yml  python-package.yml  python-publish.yml
2.6/: 404.html  index.html  sitemap.xml
2.6.21/: 404.html  index.html  sitemap.xml
2.6.21/CHANGELOG/: index.html
2.6.21/CODE_OF_CONDUCT/: index.html
2.6.21/CONTRIBUTING/: index.html
2.6.21/LICENSE/: index.html
2.6.21/SECURITY/: index.html
2.6.21/Sponsor/: index.html
2.6.21/TODO/: index.html
2.6.21/projects/: index.html
2.6.21/search/: search_index.json
2.6.21/videos/: index.html
2.6/CHANGELOG/: index.html
2.6/CODE_OF_CONDUCT/: index.html
2.6/CONTRIBUTING/: index.html
2.6/LICENSE/: index.html
2.6/SECURITY/: index.html
2.6/Sponsor/: index.html
2.6/TODO/: index.html
2.6/overrides/: main.html
2.6/projects/: index.html
2.6/search/: search_index.json
2.6/videos/: index.html
3.0/: 404.html  index.html  sitemap.xml
3.0.0rc1/: 404.html  index.html  sitemap.xml
3.0.0rc1/CHANGELOG/: index.html
3.0.0rc1/CODE_OF_CONDUCT/: index.html
3.0.0rc1/CONTRIBUTING/: index.html
3.0.0rc1/LICENSE/: index.html
3.0.0rc1/SECURITY/: index.html
3.0.0rc1/Sponsor/: index.html
3.0.0rc1/TODO/: index.html
3.0.0rc1/projects/: index.html
3.0.0rc1/search/: search_index.json
3.0.0rc1/videos/: index.html
3.0/CHANGELOG/: index.html
3.0/CODE_OF_CONDUCT/: index.html
3.0/CONTRIBUTING/: index.html
3.0/LICENSE/: index.html
3.0/SECURITY/: index.html
3.0/Sponsor/: index.html
3.0/TODO/: index.html
3.0/overrides/: main.html
3.0/projects/: index.html
3.0/search/: search_index.json
3.0/videos/: index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
Compatible Version/: tkintertools.py
Contact/: index.html
LICENSE/: index.html
Release Version/version 1.0/: tkintertools.py
Release Version/version 1.3/: tkintertools.py
Release Version/version 1.4/: tkintertools.py
Release Version/version 2.1/: tkintertools.py
Release Version/version 2.4/: tkintertools.py
SECURITY/: index.html
Sponsor/: index.html
TODO/: index.html
Translate/: index.html
blog/: index.html
blog/tags/: index.html
css/: extra.css  timeline.css
docs/: 404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contact.md  Home-ch.md  Home-en.md  Home.md  LICENSE.md  README.md  SECURITY.md  Sponsor.md  TODO.md  Translate.md  _config.yml  changelog.yml  index.html  index.md  navigation.md  requirements.txt  sitemap.xml  undone.md
docs/2.6/: CONTRIBUTING.md  index.md  mkdocs.yml
docs/3.0/: Sponsor.md  mkdocs.yml
docs/blog/: .authors.yml  index.md  tags.md
docs/css/: extra.css
docs/documents/: constants.md  exceptions.md  index.html  index.md  main.md  tools_3d.md
docs/en/: mkdocs.yml
docs/more/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  SECURITY.md
docs/news/: README.md
docs/other/: CHANGELOG.md  CONTRIBUTING.md
docs/overrides/: blog-post.html  blog.html  custom.css  main.html
docs/projects/: 3.md  Chess.md  Intelligent Magic Cube.md  index.md
docs/search/: search_index.json
docs/site/: 404.html  index.html
docs/t&d/: index.md  third-party.md
docs/tutorials/: 0-1.md  1-1.md  1-2.md  1-3.md  4-1.md  5-1.md  5-2.md  5-3.md  6-1.md  6-2.md  7-1.md  7-2.md  7-3.md  7-4.md  9-1.md
docs/videos/: index.md
documents/: constants.html  exceptions.html  index.html  main.html  tools_3d.html
documents/constants/: index.html
documents/exceptions/: index.html
documents/main/: index.html
documents/tools_3d/: index.html
en/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  sitemap.xml
en/CHANGELOG/: index.html
en/CODE_OF_CONDUCT/: index.html
en/CONTRIBUTING/: index.html
en/LICENSE/: index.html
en/SECURITY/: index.html
en/Sponsor/: index.html
en/TODO/: index.html
en/blog/: index.html
en/css/: extra.css
en/docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  Sponsor.md  TODO.md  index.md
en/javascript/: click-colorful.js  mouse.js  typing-en.js
en/projects/: index.html
en/search/: search_index.json
en/t&d/: index.html
javascript/: canvas-nest.js  click-colorful.js  mathjax.js  tablesort.js  time.js  typing.js
js/: tablesort.js
maliang/: __init__.py
more/: CHANGELOG.html  CONTRIBUTING.html  LICENSE.html
navigation/: index.html
overrides/: blog-post.html  blog.html  main.html
projects/: index.html
search/: search_index.js  search_index.json
t&d/: index.html
tests/: __init__.py  __main__.py  test_sample.py
tkintertools/: __init__.py  __main__.py  _tools.py  color.py  constants.py  core.py  dialogs.py  exceptions.py  features.py  images.py  main.py  shapes.py  style.py  texts.py  tool2d.py  tool3d.py  toolgm.py  tools_3d.py  widgets.py
tkintertools_dev/: __init__.py  __main__.py  _tools.py  constants.py  core.py  dialogs.py  exceptions.py  tool2d.py  tool3d.py  toolmd.py  tools2d.py  tools3d.py  toolsmd.py  widgets.py
tutorials/: 0-1.html  1-1.html  1-2.html  1-3.html  2-1.html  3-1.html  4-1.html  5-1.html  5-2.html  5-3.html  6-1.html  6-2.html  7-1.html  7-2.html  7-3.html  7-4.html  8-1.html  9-1.html
undone/: index.html
videos/: index.html
(+733 files in other folders)
