[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tkintertools"
authors = [{ name = "Xiaokang2022", email = "2951256653@qq.com" }]
maintainers = [{ name = "Xiaokang2022", email = "2951256653@qq.com" }]
description = "A lightweight UI framework based on tkinter with all UI drawn in Canvas."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
keywords = [
    "tkinter",
    "gui",
    "ui",
    "cross-platform",
    "themed",
    "typed",
    "lightweight",
    "ui-design",
    "modern-ui",
    "custom",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["typing-extensions"]

[project.optional-dependencies]
opt = [
    "darkdetect==0.8.0",
    "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
    "pywinstyles==1.8;                  platform_system == 'Windows'",
    "hPyT==1.3.7;                       platform_system == 'Windows'",
    "win32material==1.0.7;              platform_system == 'Windows'",
    "pillow>=10.0.0",
]
ext = [
    "tkintertools-mpl>=1.2.3",
    "tkintertools-media>=1.1.3",
    "tkintertools-3d>=1.0.3",
]

[project.urls]
"Bug tracker" = "https://github.com/Xiaokang2022/tkintertools/issues"
"Changelog" = "https://xiaokang2022.github.io/tkintertools/CHANGELOG/"
"Documentation" = "https://xiaokang2022.github.io/tkintertools-docs/"
"Donate" = "https://xiaokang2022.github.io/tkintertools/Sponsor/"
"Homepage" = "https://xiaokang2022.github.io/tkintertools/"
"Source code" = "https://github.com/Xiaokang2022/tkintertools"

[tool.setuptools.dynamic]
version = { attr = "tkintertools.__version__" }

[tool.setuptools.packages.find]
include = ["tkintertools*"]

[tool.pylint]
output-format = "colorized"
reports = "y"
fail-on = "E,F"
fail-under = 9
disable = 'line-too-long'

[tool.pytest.ini_options]
addopts = ["--color=yes", "--reruns=3"]
