[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "maliang"
authors = [{ name = "Xiaokang2022" }, { email = "2951256653@qq.com" }]
maintainers = [{ name = "Xiaokang2022" }, { email = "2951256653@qq.com" }]
description = "A lightweight UI framework based on tkinter with all UI drawn in Canvas."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "tkinter",
    "gui",
    "ui",
    "cross-platform",
    "themed",
    "typed",
    "lightweight",
    "ui-design",
    "modern-ui",
    "custom",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["typing-extensions"]
optional-dependencies.opt = [
    "darkdetect==0.8.0",
    "darkdetect[macos-listener]==0.8.0; platform_system == 'Darwin'",
    "pywinstyles==1.8;                  platform_system == 'Windows'",
    "hPyT==1.4.0;                       platform_system == 'Windows'",
    "win32material==1.0.7;              platform_system == 'Windows'",
    "pillow>=10.0.0",
]
optional-dependencies.ext = [
    "maliang-mpl>=1.2.3",
    "maliang-media>=1.1.3",
    "maliang-three>=1.0.3",
]
urls."Bug tracker" = "https://github.com/Xiaokang2022/maliang/issues"
urls."Changelog" = "https://xiaokang2022.github.io/maliang/CHANGELOG/"
urls."Documentation" = "https://xiaokang2022.github.io/maliang-docs/"
urls."Donate" = "https://xiaokang2022.github.io/maliang/Sponsor/"
urls."Homepage" = "https://xiaokang2022.github.io/maliang/"
urls."Source code" = "https://github.com/Xiaokang2022/maliang"

[tool.setuptools.dynamic]
version = { attr = "maliang.__version__" }

[tool.setuptools.packages.find]
include = ["maliang*"]

[tool.pylint]
output-format = "colorized"
reports = "y"
fail-on = "E,F"
fail-under = 9
disable = 'line-too-long'

[tool.pytest.ini_options]
addopts = ["--color=yes", "--reruns=3"]
